<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Samsung Contest</string>
    <string name="rules">Opište nejrychleji a správně soutěžní text a vyhrajte hodnotné ceny od společnosti Samsung. Více informací získáte na webové adresa <a href="http://www.urladresa.cz/">www.urladresa.cz/</a></string>
	<string name="rules_agreed">Účastí v soutěži souhlasíte s podmínkami soutěže, které jsou umístěny na <a href="http://www.urladresa.cz/pravidla/">www.urladresa.cz/pravidla/</a>.</string>
	<string name="start_attemp">Začít soutěžní pokus</string>
	<string name="end_attemp">Ukončit pokus</string>
	<string name="send_attemp">Odeslat pokus</string>
	<string name="send_form">Odeslat formulář</string>
	<string name="try_again">Začít znovu</string>
	<string name="counter">00:00</string>
	<string name="name">Jméno:</string>
	<string name="email">Email:</string>
	<string name="tel">Telefon:</string>
	<string name="back_start">Zpět na začátek</string>
</resources>
