<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView  
		android:id="@+id/tv_form_error"
		android:textColor="#cd5c5c"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    />
    
	<TextView  
		android:id="@+id/tv_name"
	    android:layout_width="100dip" 
	    android:layout_height="wrap_content" 
	    android:text="@string/name"
	    android:layout_below="@id/tv_form_error"
	    />
	    
	<EditText android:id="@+id/et_name" 
		android:layout_width="200dip"
		android:lines="1"
		android:layout_toRightOf="@id/tv_name"
		android:layout_height="wrap_content" 
		android:layout_below="@id/tv_form_error"
		/>
		
	<TextView  
		android:id="@+id/tv_email"
	    android:layout_width="100dip" 
	    android:layout_height="wrap_content" 
	    android:text="@string/email"
	    android:layout_below="@id/et_name"
	    />
	    
	<EditText android:id="@+id/et_email" 
		android:layout_width="200dip"
		android:lines="1"
		android:layout_toRightOf="@id/tv_email"
		android:layout_below="@id/et_name"
		android:layout_height="wrap_content" />
		
	<TextView  
		android:id="@+id/tv_tel"
	    android:layout_width="100dip"  
	    android:layout_height="wrap_content" 
	    android:text="@string/tel"
	    android:layout_below="@id/et_email"
	    />
	    
	<EditText android:id="@+id/et_tel" 
		android:layout_width="200dip"
		android:lines="1"
		android:layout_toRightOf="@id/tv_tel"
		android:layout_below="@id/et_email"
		android:layout_height="wrap_content" />
		
	<Button android:id="@+id/btn_send_form"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_below="@id/et_tel"
			android:lines="1"
			android:text="@string/send_form" />
</RelativeLayout>
